tests/machine/x/ocaml/in_operator.ml
let xs = [1;2;3]

let () =
  print_endline (2 in xs)
  print_endline not ((5 in xs))
